--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="col-lg-6 text-center">
                     <div class="profile-container animate__animated animate__fadeIn animate__delay-1s">
-                        <img src="images/profile.jpg" alt="Dulanka Nimsara" class="profile-img rounded-circle">
+                        <img src="images/profile1.jpg" alt="Dulanka Nimsara" class="profile-img rounded-circle">
                         <div class="profile-glow"></div>
                         <div class="profile-particles"></div>
                         <div class="tech-icons">
