--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -392,7 +392,7 @@
                         <div class="social-links mt-5">
                             <h4 class="mb-4">Connect With Me</h4>
                             <div class="d-flex flex-wrap gap-3">
-                                <a href="www.linkedin.com/in/dulanka-gunathilaka-93a184323" class="social-icon linkedin"
+                                <a href="https://linkedin.com/in/dulanka-gunathilaka-93a184323" class="social-icon linkedin"
                                     target="_blank"><i class="fab fa-linkedin-in"></i></a>
                                 <a href="https://github.com/dulankagunathilaka" class="social-icon github"
                                     target="_blank"><i class="fab fa-github"></i></a>
